avoiding odd jump when page is taller than the viewport

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ html {
   background: var(--haunted-dreams);
   color: var(--bleach-white);
   font: 1em/1.3 var(--sans-serif);
+  overflow-y: auto
 }
 
 body {
